style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: Arial, Helvetica, sans-serif;
}

nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 80px;
}

.logo img{
    width: 180px;
}

.menu{
    display: flex;
    gap: 30px;
}

.menu a{
    text-decoration: none;
    color: black;
    font-weight: 500;
}

button{
    background-color: blue;
    color: white;
    padding: 12px 44px;
    border-radius: 8px;
    border: none;
    cursor: pointer;
}

.hero{
    background-image:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url("./assets/banner.jpg");
    background-size:cover;
    background-position:center;
    background-repeat:no-repeat;
    min-height:700px;
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center;
    text-align:center;
    text-decoration: none;
    color: white;
}

.hero h1{
    font-size: 80px;
    font-weight: 700;
    margin-bottom: 24px;
}

.hero p{
    font-size: 18px;
    max-width: 750px;
    line-height: 1.6;
    margin-bottom: 40px;
}
.hero-btn{
    padding: 18px 40px;
    margin-top: 350px;
}

.speakers{
    padding: 100px 90px;
}

.speakers h2{
    text-align: center;
    font-size: 46px;
    font-weight: 700;
    margin-bottom: 60px;
}

.speaker-container{
    display: grid;
    grid-template-columns: repeat(2,1fr);
    gap: 35px;
}

.speaker-card{
    background: white;
    border-radius: 18px;
    overflow: hidden;
    box-shadow: 0 12px 35px rgba(0,0,0,.08);
    transition: .3s;
}

.speaker-card:hover{
    transform: translateY(-8px);
}

.speaker-card img{
    width: 100%;
    height: 320px;
    object-fit: cover;
    display: block;
}

.speaker-card span{
    display: block;
    margin: 24px 24px 10px;
    color: #4F46E5;
    font-size: 14px;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.speaker-card h3{
    margin: 0 24px;
    font-size: 30px;
    font-weight: 700;
}

.speaker-card p{
    margin: 12px 24px 30px;
    color: #6B7280;
    font-size: 17px;
    line-height: 1.6;
}


.pricing{
    padding: 120px 80px;
    background: #F8FAFC;
}

.pricing h2{
    text-align: center;
    font-size: 48px;
    font-weight: 700;
    color: #111827;
    margin-bottom: 16px;
}

.pricing > p{
    text-align: center;
    font-size: 18px;
    color: #6B7280;
    margin-bottom: 60px;
}

.pricing-container{
    display: flex;
    justify-content: center;
    gap: 30px;
    align-items: stretch;
}

.price-card{
    width: 360px;
    background: #FFFFFF;
    border: 1px solid #E5E7EB;
    border-radius: 20px;
    padding: 40px;
    box-shadow: 0 12px 30px rgba(15,23,42,.08);
    transition: .3s;
}

.price-card:hover{
    transform: translateY(-8px);
}

.featured{
    background: #111827;
    color: white;
    transform: scale(1.05);
}

.featured:hover{
    transform: scale(1.05) translateY(-8px);
}

.price-card h3{
    font-size: 18px;
    font-weight: 600;
    text-transform: uppercase;
    color: #6B7280;
    margin-bottom: 20px;
}

.featured h3{
    color: white;
}

.price-card h4{
    font-size: 60px;
    font-weight: 700;
    color: #111827;
    margin-bottom: 10px;
}

.featured h4{
    color: white;
}

.price-card p{
    font-size: 16px;
    color: #6B7280;
    margin-bottom: 25px;
}

.featured p{
    color: rgba(255,255,255,.75);
}

.price-card hr{
    border: none;
    border-top: 1px solid #E5E7EB;
    margin: 25px 0;
}

.featured hr{
    border-color: rgba(255,255,255,.2);
}

.price-card ul{
    list-style: none;
    margin-bottom: 35px;
    padding: 0;
}

.price-card ul li{
    position: relative;
    padding-left: 18px;
    margin-bottom: 16px;
    color: #374151;
    line-height: 1.6;
}

.featured ul li{
    color: white;
}

.price-card ul li::before{
    content: "";
    width: 7px;
    height: 7px;
    background: #3B82F6;
    border-radius: 50%;
    position: absolute;
    left: 0;
    top: 10px;
}

.price-card button{
    width: 100%;
    padding: 15px;
    border-radius: 10px;
    border: 2px solid #2563EB;
    background: white;
    color: #2563EB;
    font-size: 16px;
    font-weight: 600;
    cursor: pointer;
    transition: .3s;
}

.price-card button:hover{
    background: #2563EB;
    color: white;
}

.featured button{
    background: #2563EB;
    color: white;
    border: none;
}

.featured button:hover{
    background: #1D4ED8;
}

@media (max-width:992px){

    .pricing-container{
        flex-direction: column;
        align-items: center;
    }

    .price-card{
        width: 100%;
        max-width: 420px;
    }

    .featured{
        transform: none;
    }

    .featured:hover{
        transform: translateY(-8px);
    }
}

.why-attend{
    padding:120px 80px;
    background:#F8FAFC;
    text-align:center;
}

.why-attend h2{
    font-size:48px;
    font-weight:700;
    color:#111827;
    margin-bottom:15px;
}

.why-attend .subtitle{
    max-width:700px;
    margin:0 auto 70px;
    font-size:18px;
    color:#6B7280;
    line-height:1.7;
}

.why-container{
    display:grid;
    grid-template-columns:repeat(2,1fr);
    gap:30px;
}

.why-card{
    background:#fff;
    padding:35px;
    border-radius:18px;
    box-shadow:0 10px 30px rgba(0,0,0,.08);
    transition:.3s;
    text-align:left;
}

.why-card:hover{
    transform:translateY(-8px);
}

.icon{
    width:60px;
    height:60px;
    background:#DBEAFE;
    color:#2563EB;
    font-size:30px;
    display:flex;
    justify-content:center;
    align-items:center;
    border-radius:50%;
    margin-bottom:25px;
}

.why-card h3{
    font-size:24px;
    color:#111827;
    margin-bottom:15px;
}

.why-card p{
    color:#6B7280;
    line-height:1.7;
    font-size:16px;
}

.why-btn{
    margin-top:60px;
    background:#2563EB;
    color:#fff;
    padding:16px 40px;
    border:none;
    border-radius:10px;
    font-size:17px;
    font-weight:600;
    cursor:pointer;
    transition:.3s;
}

.why-btn:hover{
    background:#1D4ED8;
}



@media(max-width:992px){

    .why-container{
        grid-template-columns:1fr;
    }

    .why-attend{
        padding:80px 30px;
    }

    .why-attend h2{
        font-size:38px;
    }

}


.footer{
    background:#111827;
    padding:50px 80px 30px;
}

.footer-top{
    display:flex;
    justify-content:space-between;
    align-items:center;
}

.footer-logo img{
    width:180px;
}

.social-icons{
    display:flex;
    gap:18px;
}

.social-icons a{
    width:45px;
    height:45px;
    display:flex;
    justify-content:center;
    align-items:center;
    text-decoration:none;
    background:#1F2937;
    color:white;
    border-radius:50%;
    font-size:18px;
    transition:.3s;
}

.social-icons a:hover{
    background:#2563EB;
    transform:translateY(-5px);

